in class exercise

--- a/logistic-regression/demo.ipynb
+++ b/logistic-regression/demo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -68,13 +68,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3300000000000005"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What is the **default rate** in the dataset (# of defaults / total)\n"
+    "# What is the **default rate** in the dataset (# of defaults / total)\n",
+    "rate = df[df.default ==1].count()[0]/df.shape[0]* 100\n",
+    "rate"
    ]
   },
   {
@@ -110,7 +123,8 @@
    "source": [
     "List pertinent observations from the above analysis:\n",
     "\n",
-    "> Your insights here..."
+    "> Very few people in the dataset defaulted(3%)\n",
+    "> Income and balance seem\n"
    ]
   },
   {
@@ -129,24 +143,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                default   R-squared:                       0.123\n",
+      "Model:                            OLS   Adj. R-squared:                  0.122\n",
+      "Method:                 Least Squares   F-statistic:                     1397.\n",
+      "Date:                Mon, 13 Feb 2017   Prob (F-statistic):          2.77e-286\n",
+      "Time:                        14:07:52   Log-Likelihood:                 3644.8\n",
+      "No. Observations:               10000   AIC:                            -7286.\n",
+      "Df Residuals:                    9998   BIC:                            -7271.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [95.0% Conf. Int.]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept     -0.0752      0.003    -22.416      0.000        -0.082    -0.069\n",
+      "balance        0.0001   3.47e-06     37.374      0.000         0.000     0.000\n",
+      "==============================================================================\n",
+      "Omnibus:                     8547.967   Durbin-Watson:                   2.023\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           180810.806\n",
+      "Skew:                           4.243   Prob(JB):                         0.00\n",
+      "Kurtosis:                      22.025   Cond. No.                     1.93e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.93e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fit a linear model of the dependent variable (default) on balance\n"
+    "# Fit a linear model of the dependent variable (default) on balance\n",
+    "mod = smf.ols(formula='default ~ balance', data=df)\n",
+    "result = mod.fit()\n",
+    "print (result.summary())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       0.019553\n",
+      "1       0.030937\n",
+      "2       0.064232\n",
+      "3      -0.006457\n",
+      "4       0.026843\n",
+      "5       0.044237\n",
+      "6       0.032019\n",
+      "7       0.029831\n",
+      "8       0.075597\n",
+      "9      -0.075192\n",
+      "10     -0.075192\n",
+      "11      0.083328\n",
+      "12     -0.044406\n",
+      "13      0.003607\n",
+      "14      0.069352\n",
+      "15     -0.038018\n",
+      "16     -0.075192\n",
+      "17     -0.006679\n",
+      "18     -0.012082\n",
+      "19      0.067028\n",
+      "20     -0.045457\n",
+      "21      0.048740\n",
+      "22      0.061947\n",
+      "23      0.008184\n",
+      "24      0.025227\n",
+      "25      0.035850\n",
+      "26      0.008316\n",
+      "27      0.113754\n",
+      "28      0.004771\n",
+      "29      0.070209\n",
+      "          ...   \n",
+      "9970    0.092928\n",
+      "9971   -0.051734\n",
+      "9972    0.022918\n",
+      "9973    0.038592\n",
+      "9974    0.046022\n",
+      "9975    0.042773\n",
+      "9976   -0.046826\n",
+      "9977    0.043698\n",
+      "9978    0.210847\n",
+      "9979   -0.052692\n",
+      "9980    0.024812\n",
+      "9981    0.020838\n",
+      "9982    0.005787\n",
+      "9983   -0.009395\n",
+      "9984    0.038478\n",
+      "9985    0.034284\n",
+      "9986   -0.023070\n",
+      "9987    0.066746\n",
+      "9988   -0.075192\n",
+      "9989    0.054587\n",
+      "9990   -0.026830\n",
+      "9991    0.010368\n",
+      "9992    0.069180\n",
+      "9993    0.046737\n",
+      "9994   -0.052800\n",
+      "9995    0.017219\n",
+      "9996    0.023246\n",
+      "9997    0.034604\n",
+      "9998    0.128579\n",
+      "9999   -0.049098\n",
+      "Name: linear_preds, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Generate predictions using your model (this can be interpreted as probability of default)\n"
+    "# Generate predictions using your model (this can be interpreted as probability of default)\n",
+    "df['linear_preds'] = result.predict()\n",
+    "print(df['linear_preds'])"
    ]
   },
   {
@@ -157,7 +279,7 @@
    },
    "outputs": [],
    "source": [
-    "# Visualize the results: scatterplot of balance v.s. predcited default rate. Bonus: add actual default rate.\n"
+    "# Visualize the results: scatterplot of balance v.s. predicted default rate. Bonus: add actual default rate.\n"
    ]
   },
   {
@@ -168,7 +290,8 @@
    },
    "outputs": [],
    "source": [
-    "# Interpret the **coefficients** and assess the **model fit**\n"
+    "# Interpret the **coefficients** and assess the **model fit**\n",
+    "plt.plot"
    ]
   },
   {
@@ -269,24 +392,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Generalized Linear Model Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>default</td>     <th>  No. Observations:  </th>  <td> 10000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                 <td>GLM</td>       <th>  Df Residuals:      </th>  <td>  9998</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model Family:</th>       <td>Binomial</td>     <th>  Df Model:          </th>  <td>     1</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Link Function:</th>        <td>logit</td>      <th>  Scale:             </th>    <td>1.0</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>               <td>IRLS</td>       <th>  Log-Likelihood:    </th> <td> -798.23</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>           <td>Mon, 13 Feb 2017</td> <th>  Deviance:          </th> <td>  1596.5</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>               <td>14:56:39</td>     <th>  Pearson chi2:      </th> <td>7.15e+03</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Iterations:</th>        <td>11</td>        <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th> <th>[95.0% Conf. Int.]</th> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th> <td>  -10.6513</td> <td>    0.361</td> <td>  -29.491</td> <td> 0.000</td> <td>  -11.359    -9.943</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>balance</th>   <td>    0.0055</td> <td>    0.000</td> <td>   24.952</td> <td> 0.000</td> <td>    0.005     0.006</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                 Generalized Linear Model Regression Results                  \n",
+       "==============================================================================\n",
+       "Dep. Variable:                default   No. Observations:                10000\n",
+       "Model:                            GLM   Df Residuals:                     9998\n",
+       "Model Family:                Binomial   Df Model:                            1\n",
+       "Link Function:                  logit   Scale:                             1.0\n",
+       "Method:                          IRLS   Log-Likelihood:                -798.23\n",
+       "Date:                Mon, 13 Feb 2017   Deviance:                       1596.5\n",
+       "Time:                        14:56:39   Pearson chi2:                 7.15e+03\n",
+       "No. Iterations:                    11                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [95.0% Conf. Int.]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept    -10.6513      0.361    -29.491      0.000       -11.359    -9.943\n",
+       "balance        0.0055      0.000     24.952      0.000         0.005     0.006\n",
+       "==============================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Use the `smf.glm` function to fit `default` to `balance` (hint: use the `binomial` family)\n"
+    "# Use the `smf.glm` function to fit `default` to `balance` (hint: use the `binomial` family)\n",
+    "logistic_model = smf.glm(formula='default ~ balance', data=df, family=sm.families.Binomial()).fit()\n",
+    "logistic_model.summary()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       0.001306\n",
+      "1       0.002113\n",
+      "2       0.008595\n",
+      "3       0.000434\n",
+      "4       0.001777\n",
+      "5       0.003704\n",
+      "6       0.002211\n",
+      "7       0.002016\n",
+      "8       0.013833\n",
+      "9       0.000024\n",
+      "10      0.000024\n",
+      "11      0.019088\n",
+      "12      0.000087\n",
+      "13      0.000665\n",
+      "14      0.010653\n",
+      "15      0.000114\n",
+      "16      0.000024\n",
+      "17      0.000430\n",
+      "18      0.000342\n",
+      "19      0.009664\n",
+      "20      0.000083\n",
+      "21      0.004479\n",
+      "22      0.007808\n",
+      "23      0.000807\n",
+      "24      0.001660\n",
+      "25      0.002600\n",
+      "26      0.000812\n",
+      "27      0.065918\n",
+      "28      0.000699\n",
+      "29      0.011042\n",
+      "          ...   \n",
+      "9970    0.028388\n",
+      "9971    0.000064\n",
+      "9972    0.001505\n",
+      "9973    0.002919\n",
+      "9974    0.003994\n",
+      "9975    0.003482\n",
+      "9976    0.000079\n",
+      "9977    0.003621\n",
+      "9978    0.811506\n",
+      "9979    0.000061\n",
+      "9980    0.001631\n",
+      "9981    0.001379\n",
+      "9982    0.000729\n",
+      "9983    0.000384\n",
+      "9984    0.002905\n",
+      "9985    0.002433\n",
+      "9986    0.000215\n",
+      "9987    0.009551\n",
+      "9988    0.000024\n",
+      "9989    0.005730\n",
+      "9990    0.000183\n",
+      "9991    0.000885\n",
+      "9992    0.010577\n",
+      "9993    0.004116\n",
+      "9994    0.000061\n",
+      "9995    0.001183\n",
+      "9996    0.001526\n",
+      "9997    0.002467\n",
+      "9998    0.116760\n",
+      "9999    0.000071\n",
+      "Name: logi_regre, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Generate a set of predicted probabilities using your model\n"
+    "# Generate a set of predicted probabilities using your model\n",
+    "df['logi_regre'] = logistic_model.predict()\n",
+    "print(df['logi_regre'])"
    ]
   },
   {
@@ -358,13 +623,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Generalized Linear Model Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>       <td>default</td>     <th>  No. Observations:  </th>  <td> 10000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                 <td>GLM</td>       <th>  Df Residuals:      </th>  <td>  9998</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model Family:</th>       <td>Binomial</td>     <th>  Df Model:          </th>  <td>     1</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Link Function:</th>        <td>logit</td>      <th>  Scale:             </th>    <td>1.0</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>               <td>IRLS</td>       <th>  Log-Likelihood:    </th> <td> -798.23</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>           <td>Mon, 13 Feb 2017</td> <th>  Deviance:          </th> <td>  1596.5</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>               <td>14:56:45</td>     <th>  Pearson chi2:      </th> <td>7.15e+03</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Iterations:</th>        <td>11</td>        <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th> <th>[95.0% Conf. Int.]</th> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th> <td>  -10.6513</td> <td>    0.361</td> <td>  -29.491</td> <td> 0.000</td> <td>  -11.359    -9.943</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>balance</th>   <td>    0.0055</td> <td>    0.000</td> <td>   24.952</td> <td> 0.000</td> <td>    0.005     0.006</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                 Generalized Linear Model Regression Results                  \n",
+       "==============================================================================\n",
+       "Dep. Variable:                default   No. Observations:                10000\n",
+       "Model:                            GLM   Df Residuals:                     9998\n",
+       "Model Family:                Binomial   Df Model:                            1\n",
+       "Link Function:                  logit   Scale:                             1.0\n",
+       "Method:                          IRLS   Log-Likelihood:                -798.23\n",
+       "Date:                Mon, 13 Feb 2017   Deviance:                       1596.5\n",
+       "Time:                        14:56:45   Pearson chi2:                 7.15e+03\n",
+       "No. Iterations:                    11                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [95.0% Conf. Int.]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept    -10.6513      0.361    -29.491      0.000       -11.359    -9.943\n",
+       "balance        0.0055      0.000     24.952      0.000         0.005     0.006\n",
+       "==============================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Retrieve beta values from the model\n"
+    "# Retrieve beta values from the model\n",
+    "# We need to exponentiate the beta to remove it from the logit space\n",
+    "logistic_model.summary()\n"
    ]
   },
   {
@@ -624,22 +960,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
